feat: add store banner settings API
